# aether-agent

./: .env.example  .env.template  .gitignore  5_ADDED_TOOLS_SUMMARY.md  AGENT_RUNTIME_IMPLEMENTATION_SUMMARY.md  AetherAgent-Memory-Enhancement-Summary.md  CHANGELOG-PROD.md  CHANGELOG.md  Caddyfile  Changelog_&_UI_Ongoing_Enhancements.md  Dockerfile.api  Infinite_Tool-&-Context-Checkpointing-Memory-Loop.md  LICENSE  New-Runtime-Wiring.md  README.md  README_COMPLETE.md  Tool-&-Memory-Enhancements-in-Aether-Agent.md  VISION.md  agent_benchmark.py  apply_schema.py  benchmark-results-tasks-summary.md  debug_server.py  diag_lsp.py  docker-compose.prod.yml  docker-compose.yml  init.sql  inspect_routes.py  last-logs-no-web-search.md  logs-from-multi-tool-call-task.md  mcas_gateway_architecture.md  requirements.txt  schema.sql  seed_registry.py  seed_tool_registry.py  setup.py  start_aether.sh  stop_aether.sh  test_conn.py  test_context_hardening.py  test_fabric_endpoints.sh
Contunity_Illusion_Engine/: CIE_IMPLEMENTATION_SPEC.md  CIE_NOTES.md  Continuity_Illision_Engine-Architecture-&-WhaitePaper-v0.1.md  Embedding-Rerank-&-Memory.md  SCHEMAS_CEI_CONTINUED.md
Current_TODO's/: Async-state-machine.md  Context-Guage-UI-fix-&-added-tool-access-prompt.md  (+7 more)
benchmarking-info/aether_checkpoint/: INTEGRATION.md  README.md  USAGE.md  __init__.py  backends.py  checkpoint.py  checkpointer.py  config.py  engine.py  loop.py  memory.py  prompts.py  pyproject.toml
benchmarking-info/aether_checkpoint/examples/: example_usage.py  integration_patterns.py  integration_template.py
(+255 files in other folders)
